--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
 
+    <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container pt-1 pb-1">
-          <a class="navbar-brand" href="#">Hotel Samurai</a>
+          <a class="navbar-brand fw-bold" href="#">Hotel Samurai</a>
           <button class="navbar-toggler" type="button" 
           data-bs-toggle="collapse" data-bs-target="#navbarNav" 
           aria-controls="navbarNav" aria-expanded="false"
@@ -35,7 +36,161 @@
             </div>
         </div>
       </nav>
-    
+      <!--End Navbar-->
+
+      <!--Banner-->
+      <main class="w-100 min-vh-100 background-banner d-flex align-items-center">
+        <div class="container">
+            <div class="card rounded-1 border-0 p-1 pt-4 pb-4 p-lg-4 pb-md-0 pb-lg-0 shadow">
+                <div class="card-body">
+                    <form class="pb-lg-2" onsubmit="return false">
+                        <div class="row">
+                            <div class="col-12 col-md-12 col-lg-3 mb-3">
+                                <label for="localizacao" class="form-label fw-bold">Localização</label>
+                                <input type="text" 
+                                class="form-control rounded-0" 
+                                name="localizacao" 
+                                id="localizacao" 
+                                placeholder="Digite a localização">
+                            </div>
+
+                            <div class="col-12 col-md-12 col-lg-2 mb-3">
+                                <label for="entrada" class="form-label fw-bold">Entrada</label>
+                                <input type="date" 
+                                class="form-control rounded-0" 
+                                name="entrada" 
+                                id="entrada" >
+                            </div>
+
+                            <div class="col-12 col-md-12 col-lg-2 mb-3">
+                                <label for="saida" class="form-label fw-bold">Saída</label>
+                                <input type="date" 
+                                class="form-control rounded-0" 
+                                name="saida" 
+                                id="saida" >
+                            </div>
+
+                            <div class="col-12 col-md-12 col-lg-3 mb-3">
+                                <label for="periodo" class="form-label fw-bold">Período</label>
+                                <select class="form-select rounded-0" 
+                                name="periodo" 
+                                id="periodo" 
+                                aria-label="Selecione o período">
+
+                                    <option value="" selected>Selecione o período</option>
+                                    <option value="madrugada">Madrugada</option>
+                                    <option value="manha">Manhã</option>
+                                    <option value="tarde">Tarde</option>
+                                    <option value="noite">Noite</option>
+                                </select>
+                            </div>
+                            <div class="col-12 col md-12 col-lg-2 mb-3 pt-3 d-lg-flex align-items-end">
+                                <a href="#" class="btn btn-lg btn-orange w-100 rounded-0 border-0 p-lg-1">Pesquisar</a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+      </main>
+      <!--End Banner-->
+
+      <!--Destaques e cards-->
+      <main class="w-100 pb-5 pt-lg-4 pb-lg-5">
+        <div class="container pt-5 pb-2 pt-lg-5 pb-lg-0">
+            <h1 class="fs-4 text-center text-lg-center-start mb-5 fw-bold">
+                Hotéis e Pousadas em destaques
+            </h1>
+            <div class="row mb-4">
+                <!--Card 01-->
+                <div class="col-12 col-md-12 col-lg-4 mb-5">
+                    <div class="card shadow border-0">
+                        <div class="position-relative">
+                            <img src="./assets/img/hoteis/hotel-1.jpeg" alt="hotel01" class="card-img-top">
+                            <span class="position-absolute 
+                            bottom-0 
+                            right-0 
+                            bg-color-orange 
+                            rounded-1
+                            ps-2
+                            pe-2 
+                            pt-1 
+                            pb-1">
+                                R$: 669,00
+                            </span>
+                        </div>
+                        <div class="card-body p-3"> 
+                            <h5 class="card-title mb-1">Hotel Califórnia</h5>
+                            <p class="text-muted">Porto Seguro - BA</p>
+                            <p class="card-text">
+                                Hotel poximo de varias lindas praias com varias atrações turisticas da região de porto seguro BA.
+                            </p>
+                            <a href="#" class="btn btn-orange rounded-0 w-100">Verificar Disponibilidade</a>
+                        </div>
+                    </div>
+                </div>
+                <!--Card 02-->
+                <div class="col-12 col-md-12 col-lg-4 mb-5">
+                    <div class="card shadow border-0">
+                        <div class="position-relative">
+                            <img src="./assets/img/hoteis/hotel-2.jpeg" alt="hotel01" class="card-img-top">
+                            <span class="position-absolute 
+                            bottom-0 
+                            right-0 
+                            bg-color-orange 
+                            rounded-1
+                            ps-2
+                            pe-2 
+                            pt-1 
+                            pb-1">
+                                R$: 800,00
+                            </span>
+                        </div>
+                        <div class="card-body p-3"> 
+                            <h5 class="card-title mb-1">Hotel Paris Germany</h5>
+                            <p class="text-muted">Ilhéus - BA</p>
+                            <p class="card-text">
+                                Se você procura um hotel totalmente luxuoso e tecnologico este hotel é ideal para você e sua familia.
+                            </p>
+                            <a href="#" class="btn btn-orange rounded-0 w-100">Verificar Disponibilidade</a>
+                        </div>
+                    </div>
+                </div>
+                <!--Card 03-->
+                <div class="col-12 col-md-12 col-lg-4 mb-5">
+                    <div class="card shadow border-0">
+                        <div class="position-relative">
+                            <img src="./assets/img/hoteis/hotel-3.jpeg" alt="hotel01" class="card-img-top">
+                            <span class="position-absolute 
+                            bottom-0 
+                            right-0 
+                            bg-color-orange 
+                            rounded-1
+                            ps-2
+                            pe-2 
+                            pt-1 
+                            pb-1">
+                                R$: 789,90
+                            </span>
+                        </div>
+                        <div class="card-body p-3"> 
+                            <h5 class="card-title mb-1">Pousada Atlântica</h5>
+                            <p class="text-muted">Rio de Janeiro - RJ</p>
+                            <p class="card-text">
+                                Pousada linda com varias opções de diversão e tranquilidade pra você e sua familia.
+                            </p>
+                            <a href="#" class="btn btn-orange rounded-0 w-100">Verificar Disponibilidade</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 d-flex justify-content-center">
+                    <a href="#" class="btn btn-orange-outline ps-4 pe-4">Vizualizar todos</a>
+                </div>
+            </div>
+        </div>
+      </main>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
