--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Samurai</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -191,6 +194,278 @@
             </div>
         </div>
       </main>
+      <!--End Destaques e cards-->      
+
+      <!--Promoções-->
+      <main class="w-100 pb-5 pt-lg-5">
+          <div class="container">
+              <div class="w-100 title mb-5 mb-md-5 mb-lg-5 pt-lg-4 pb-lg-0">
+                  <h1 class="fs-4 text-center text-lg-center-start mb-2 fw-bold">
+                      Nossos hotéis e pousadas em promoções
+                  </h1>
+              </div>
+              <div class="row mb-4">
+                  <!--Card01-->
+                  <div class="col-12 col-md-12 col-lg-4 mb-5">
+                      <div class="card shadow border-0">
+                          <div class="position-relative">
+                              <img src="./assets/img/hoteis/hotel-4.jpeg" alt="" class="card-img-top">
+                              <span class="position-absolute
+                                bottom-0 
+                                right-0
+                                bg-color-roxo
+                                rounded-1
+                                ps-2
+                                pe-2 
+                                pt-1 
+                                pb-1">
+                                  R$: 350,00
+                              </span>
+                          </div>
+                          <div class="card-body p-3">
+                              <h5 class="card-title mb-1">
+                                  Hotel Jardim Colorado
+                              </h5>
+                              <p class="text-muted">Copacabana - RJ</p>
+                              <a href="#" class="btn btn-orange rounded-0 w-100">Verificar disponibilidade</a>
+                          </div>
+                      </div>
+                  </div>
+                  <!--Card02-->
+                  <div class="col-12 col-md-12 col-lg-4 mb-5">
+                    <div class="card shadow border-0">
+                        <div class="position-relative">
+                            <img src="./assets/img/hoteis/hotel-5.jpeg" alt="" class="card-img-top">
+                            <span class="position-absolute
+                              bottom-0 
+                              right-0
+                              bg-color-roxo
+                              rounded-1
+                              ps-2
+                              pe-2 
+                              pt-1 
+                              pb-1">
+                                R$: 450,00
+                            </span>
+                        </div>
+                        <div class="card-body p-3">
+                            <h5 class="card-title mb-1">
+                                Hotel Oasis
+                            </h5>
+                            <p class="text-muted">Balneário Camboriú - SC</p>
+                            <a href="#" class="btn btn-orange rounded-0 w-100">Verificar disponibilidade</a>
+                        </div>
+                    </div>
+                </div>
+                <!--Card03-->
+                <div class="col-12 col-md-12 col-lg-4 mb-5">
+                    <div class="card shadow border-0">
+                        <div class="position-relative">
+                            <img src="./assets/img/hoteis/hotel-6.jpg" alt="" class="card-img-top">
+                            <span class="position-absolute
+                              bottom-0 
+                              right-0
+                              bg-color-roxo
+                              rounded-1
+                              ps-2
+                              pe-2 
+                              pt-1 
+                              pb-1">
+                                R$: 600,00
+                            </span>
+                        </div>
+                        <div class="card-body p-3">
+                            <h5 class="card-title mb-1">
+                                Pousada Flor de Lotús
+                            </h5>
+                            <p class="text-muted">Angra dos Reis - RJ</p>
+                            <a href="#" class="btn btn-orange rounded-0 w-100">Verificar disponibilidade</a>
+                        </div>
+                    </div>
+                </div>
+              </div>
+              <div class="row">
+                  <div class="col-12 d-flex justify-content-center">
+                      <a href="#" class="btn btn-orange-outline ps-4 pe-4">
+                          Vizualizar todos
+                      </a>
+                  </div>
+              </div>
+          </div>
+      </main>
+      <!--End Promoções-->
+
+      <!--Diferenciais-->
+      <main class="w-100">
+          <div class="container">
+              <div class="w-100 title mb-5 mb-md-5 mb-lg-5 pt-lg-4 pb-lg-0">
+                    <h1 class="fs-4 text-center text-lg-center-start mb-2 fw-bold">
+                      Vejam alguns dos nossos diferenciais
+                    </h1>
+              </div>
+              <div class="row">
+                  <div class="col-12">
+                      <div class="row">
+                          <!--Card01-->
+                        <div class="col-12 col-md-4 col-lg-4 mb-4">
+                              <div class="card">
+                                  <img src="./assets/img/utilidades/camera.jpeg" alt="" class="card-img-top">
+                                  <div class="card-body">
+                                      <div class="card-title">
+                                          Camera de Segurança
+                                      </div>
+                                      <p class="card-text text-muted">
+                                        Uma das coisas que nos preocupamos
+                                        quando viajamos é a segurança.
+                                      </p>
+                                      <p class="card-text text-muted">
+                                        Por isso que estamos sempre investindo
+                                        pesado em segurança,
+                                        justamente para você ficar tranquilo(a)
+                                        enquanto estiver conosco.
+                                    </p>
+                                  </div>
+                              </div>
+                          </div>
+                            <!--Card02-->
+                          <div class="col-12 col-md-4 col-lg-4 mb-4">
+                            <div class="card">
+                                <img src="./assets/img/utilidades/campo.jpeg" alt="Campo de Futebol" class="card-img-top">
+                                <div class="card-body">
+                                    <div class="card-title">
+                                        Campo de Futebol
+                                    </div>
+                                    <p class="card-text text-muted">
+                                        Quem não gosta de um bom futebol, não é verdade? :)
+                                    </p>
+                                    <p class="card-text text-muted">
+                                        Oferecemos campos de futebol com um dos melhores gramados
+                                        e estruturado
+                                        para você jogar aquele futebol com a sua família e amigos.
+                                        
+                                        
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                            <!--Card03-->
+                        <div class="col-12 col-md-4 col-lg-4 mb-4">
+                            <div class="card">
+                                <img src="./assets/img/utilidades/piscina.jpeg" alt="Piscina de Natação" class="card-img-top">
+                                <div class="card-body">
+                                    <div class="card-title">
+                                        Piscina de Natação
+                                    </div>
+                                    <p class="card-text text-muted">
+                                        No calorão que tem feito nesses dias, você não pode
+                                        ficar sem se refrescar.
+                                    </p>
+                                    <p class="card-text text-muted">
+                                        Mesmo tendo praias e cachoeiras próximos dos nossos hotéis e pousadas,
+                                        pensando no seu bem estar sempre, oferecemos lindas e belas piscinas.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </main>
+      <!--End Diferenciais-->
+
+      <!-- Nossos quartos -->
+    <main class="w-100 pb-4 pb-md-4 pt-lg-4 pb-lg-4">
+        <div class="container pt-5 pb-2 pt-lg-5 pb-lg-5">
+            <h1 class="fs-4 text-center text-lg-start mb-5 fw-bold">Conheça nossos quartos aconchegantes</h1>
+            <div id="carouselControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="0">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./assets/img/quartos/quarto-1.jpeg" alt="" class="d-block w-100 rounded-1 carousel-item-img">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/img/quartos/quarto-2.jpeg" alt="" class="d-block w-100 rounded-1 carousel-item-img">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/img/quartos/quarto-3.jpeg" alt="" class="d-block w-100 rounded-1 carousel-item-img">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/img/quartos/quarto-4.jpeg" alt="" class="d-block w-100 rounded-1 carousel-item-img">
+                    </div>
+                </div>
+                <ol class="carousel-indicators">
+                    <li data-bs-target="#carouselControls" data-bs-slide-to="0" class="active"></li>
+                    <li data-bs-target="#carouselControls" data-bs-slide-to="1"></li>
+                    <li data-bs-target="#carouselControls" data-bs-slide-to="2"></li>
+                    <li data-bs-target="#carouselControls" data-bs-slide-to="3"></li>
+                </ol>
+            </div>
+        </div>
+    </main>
+    <!-- End quartos -->
+
+    <!-- Avaliações -->
+    <main class="w-100 pt-lg-4 pb-lg-5">
+        <div class="container pt-5 pb-2 pt-lg-5 pb-lg-5">
+            <div class="w-100 title mb-5 mb-md-5 mb-lg-5 pt-lg-0">
+                <h1 class="fs-4 text-center text-lg-center mb-2 fw-bold">Avaliações dos nossos clientes</h1>
+                <div class="line-orange m-auto"></div>
+            </div>
+            <div class="row pt-3 pt-md-3 pt-lg-3">
+                <div class="col-12 col-md-12 col-lg-4 mb-4 mb-md-4">
+                    <div class="card border-0 shadow p-2">
+                        <div class="card-body">
+                            <div class="w-100 mb-3">
+                                <h4 class="fs-5">Carlos Eduardo Oliveira</h4>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                            </div>
+                            <p>
+                                Vale muito apena, preço acessível e lugares muito lindo.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-12 col-lg-4 mb-4 mb-md-4">
+                    <div class="card border-0 shadow p-2">
+                        <div class="card-body">
+                            <div class="w-100 mb-3">
+                                <h4 class="fs-5">Ivaneide Pereira</h4>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                            </div>
+                            <p>
+                                Hotéis e pousadas de ótima qualidade. Recomendo!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-12 col-lg-4 mb-4 mb-md-4">
+                    <div class="card border-0 shadow p-2">
+                        <div class="card-body">
+                            <div class="w-100 mb-3">
+                                <h4 class="fs-5">Marcos Andrade</h4>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                            </div>
+                            <p>
+                                Passei a minha lua de mel em um desses hotéis e valeu muito a pena.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
