--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <p class="card-text">
                                 Hotel poximo de varias lindas praias com varias atrações turisticas da região de porto seguro BA.
                             </p>
-                            <a href="#" class="btn btn-orange rounded-0 w-100">Verificar Disponibilidade</a>
+                            <a href="./unavailable.html" class="btn btn-orange rounded-0 w-100">Verificar Disponibilidade</a>
                         </div>
                     </div>
                 </div>
@@ -153,9 +153,9 @@
                             <h5 class="card-title mb-1">Hotel Paris Germany</h5>
                             <p class="text-muted">Ilhéus - BA</p>
                             <p class="card-text">
-                                Se você procura um hotel totalmente luxuoso e tecnologico este hotel é ideal para você e sua familia.
+                                Hotel totalmente luxuoso e tecnologico este hotel é ideal para você e sua familia.
                             </p>
-                            <a href="#" class="btn btn-orange rounded-0 w-100">Verificar Disponibilidade</a>
+                            <a href="./available.html" class="btn btn-orange rounded-0 w-100">Verificar Disponibilidade</a>
                         </div>
                     </div>
                 </div>
@@ -466,6 +466,71 @@
             </div>
         </div>
     </main>
+    <!--End Avaliações-->
+
+    <!--Rodapé-->
+    <footer class="w-100 bg-light" >
+        <div class="container pt-5 pt-lg-5 pb-lg-3">
+            <div class="row">
+                <div class="col-12 col-md-3 col-lg-4 mb-3 mb-md-0 mb-lg-0">
+                    <h4 class="fs-4 fw-bold text-uppercase mb-2 mb-md-4 mb-lg-4">Hotel Samurai</h4>
+                    <p class="text-muted">
+                        Somos uma empresa que nasceu no ano de 1988
+                        cuja missão é entregar aos nossos clientes e parceiros
+                        os melhores lugares para ter um lazer e um descanso excelente e merecido.
+                    </p>
+                    <p>
+                        <a href="#" title="Facebook" class="text-decoration-none text-muted me-1 me-md-1 me-lg-2">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" title="Twitter" class="text-decoration-none text-muted me-1 me-md-1 me-lg-2">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" title="Instagram" class="text-decoration-none text-muted me-1 me-md-1 me-lg-2">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" title="YouTube" class="text-decoration-none text-muted me-1 me-md-1 me-lg-2">
+                            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                        </a>
+                    </p>
+                </div>
+
+                <div class="col-12 col-md-3 col-lg-4 pe-lg-0 ps-lg-5 mb-3 mb-md-0 mb-lg-0">
+                    <h4 class="fs-4 fw-bold mb-2 mb-md-4 mb-lg-4">Minha conta</h4>
+                    <p class=" mb-0">
+                        <a href="" class="text-decoration-none text-muted">Minhas viagens</a>
+                    </p>
+                    <p class=" mb-0">
+                        <a href="" class="text-decoration-none text-muted">Meu perfil</a>
+                    </p>
+                </div>
+                <div class="col-12 col-md-3 col-lg-4 mb-3 mb-md-0 mb-lg-0">
+                    <h4 class="fs-4 fw-bold mb-2 mb-md-4 mb-lg-4">Informações adicionais</h4>
+                    <p class=" mb-0">
+                        <a href="" class="text-decoration-none text-muted">Termos e condições</a>
+                    </p>
+
+                    <p class=" mb-0">
+                        <a href="" class="text-decoration-none text-muted">Politica de privacidade</a>
+                    </p>
+
+                    <p class=" mb-0">
+                        <a href="" class="text-decoration-none text-muted">Central de ajuda</a>
+                    </p>
+
+                    <p class=" mb-0">
+                        <a href="" class="text-decoration-none text-muted">Condições de uso</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="w-100 bg-color-orange d-flex justify-content-center align-items-center">
+            <p class="mb-0 pt-1 pb-1">
+                &copy; Todos os direitos reservados.
+            </p>
+        </div>
+    </footer>
+    <!--End Rodapé-->
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
