--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
             <div class="row">
                 <div class="col-12 d-flex justify-content-center">
-                    <a href="#" class="btn btn-orange-outline ps-4 pe-4">Vizualizar todos</a>
+                    <a href="./all.html" class="btn btn-orange-outline ps-4 pe-4">Vizualizar todos</a>
                 </div>
             </div>
         </div>
@@ -286,7 +286,7 @@
               </div>
               <div class="row">
                   <div class="col-12 d-flex justify-content-center">
-                      <a href="#" class="btn btn-orange-outline ps-4 pe-4">
+                      <a href="./all.html" class="btn btn-orange-outline ps-4 pe-4">
                           Vizualizar todos
                       </a>
                   </div>
